4th time -- attemtpting to prevent codeblocks from extending too far on mobile

--- a/src/styles/syntaxHighlighting.css
+++ b/src/styles/syntaxHighlighting.css
@@ -82,7 +82,10 @@ code[class*="language-"] {
   font-family: Menlo, Monaco, Consolas, "Andale Mono", "Ubuntu Mono", "Courier New", monospace;
   direction: ltr;
   text-align: left;
-  white-space: pre;
+  /*white-space: pre;*/
+  white-space: nowrap;
+  max-width: 100%;
+  overflow-x: scroll;
   word-spacing: normal;
   word-break: normal;
   line-height: 1.5;
